tests/trust_inference/trust_inference.exp
Error ------------------------------------------------------------------------------------------------------ t2.js:12:10

Cannot return `g(...)` because `any` may have been passed into number [1] and `any` is incompatible with trusted
number [2]. [incompatible-trust]

   t2.js:12:10
   12|   return g(x)
                ^^^^

References:
   t2.js:3:34
    3| function h(x: $Trusted<number>): number {
                                        ^^^^^^ [1]
   t2.js:11:24
   11| function f(x: number): $Trusted<number> {
                              ^^^^^^^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------- t2.js:16:8

Cannot call `f` with `42` bound to `x` because explicit 'any' [1] is incompatible with trusted number [2].
[incompatible-trust]

   t2.js:16:8
   16| f((42: any));
              ^^^ [1]

References:
   t2.js:11:15
   11| function f(x: number): $Trusted<number> {
                     ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ t2.js:19:35

Cannot assign `x` to `y` because `any` may have been passed into number [1] and `any` is incompatible with trusted
number [2] in the return value. [incompatible-trust]

   t2.js:19:35
   19| var y: number=>$Trusted<number> = x;
                                         ^

References:
   t2.js:18:16
   18| var x: number=>number = (function (x: number): number { return (42: any); });
                      ^^^^^^ [1]
   t2.js:19:16
   19| var y: number=>$Trusted<number> = x;
                      ^^^^^^^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------- t2.js:23:2

Cannot cast `b` to explicit 'any' because explicit 'any' [1] is incompatible with trusted number [2].
[incompatible-trust]

   t2.js:23:2
   23| (b: any)
        ^

References:
   t2.js:23:5
   23| (b: any)
           ^^^ [1]
   t2.js:22:8
   22| var b: number=>number = a;
              ^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------------ t3.js:15:27

Cannot assign `a` to `b` because `any` may have been passed into number [1] and `any` is incompatible with trusted
number [2]. [incompatible-trust]

   t3.js:15:27
   15| var b: $Trusted<number> = a;
                                 ^

References:
   t3.js:14:8
   14| var a: number = composenum(id, id)((42: any));
              ^^^^^^ [1]
   t3.js:15:8
   15| var b: $Trusted<number> = a;
              ^^^^^^^^^^^^^^^^ [2]



Found 5 errors
